<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <artifactId>kayttooikeuspalvelu</artifactId>
    <groupId>fi.vm.sade.kayttooikeus</groupId>
    <version>1.1.4-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Käyttöoikeuspalvelu</name>
    <organization>
        <name>The Finnish Board of Education - Opetushallitus</name>
    </organization>
    <inceptionYear>2016</inceptionYear>
    <licenses>
        <license>
            <name>European Union Public Licence</name>
            <url>http://ec.europa.eu/idabc/eupl</url>
            <distribution>manual</distribution>
        </license>
    </licenses>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.18</version>
    </parent>

    <modules>
        <module>kayttooikeus-api</module>
        <module>kayttooikeus-domain</module>
        <module>kayttooikeus-service</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.build.fileEncoding>UTF-8</project.build.fileEncoding>

        <maven.compiler.release>21</maven.compiler.release>

        <oppijanumerorekisteri.version>0.3.0-SNAPSHOT</oppijanumerorekisteri.version>
        <organisaatio.version>2016-9-SNAPSHOT</organisaatio.version>
        <ryhmasahkoposti.version>14.8-SNAPSHOT</ryhmasahkoposti.version>

        <!-- Sade utils -->
        <auditlog.api.version>8.3.0-SNAPSHOT</auditlog.api.version>

        <springfox.version>3.0.0</springfox.version>

        <!-- buildversion.txt generation plugin -->
        <maven-antrun-plugin.version>1.8</maven-antrun-plugin.version>

        <!-- QA -->
        <jadler.version>1.3.0</jadler.version>

        <orika.version>1.5.4</orika.version>

        <sonar.organization>opetushallitus</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.coverage.jacoco.xmlReportPaths>**/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>

    </properties>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>fi.vm.sade.oppijanumerorekisteri</groupId>
                <version>${oppijanumerorekisteri.version}</version>
                <artifactId>oppijanumerorekisteri-api</artifactId>
            </dependency>
            <dependency>
                <groupId>fi.vm.sade.organisaatio</groupId>
                <artifactId>organisaatio-api</artifactId>
                <version>${organisaatio.version}</version>
            </dependency>
            <dependency>
                <groupId>fi.vm.sade.viestintapalvelu</groupId>
                <artifactId>ryhmasahkoposti-api</artifactId>
                <version>${ryhmasahkoposti.version}</version>
            </dependency>
            <dependency>
                <groupId>fi.vm.sade.koodisto</groupId>
                <artifactId>koodisto-api</artifactId>
                <version>${koodisto.api.version}</version>
            </dependency>

            <!-- SADE -->
            <dependency>
                <groupId>fi.vm.sade</groupId>
                <artifactId>auditlogger</artifactId>
                <version>${auditlog.api.version}</version>
            </dependency>

            <dependency>
                <groupId>fi.vm.sade.java-utils</groupId>
                <artifactId>opintopolku-cas-servlet-filter</artifactId>
                <version>0.1.2-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>fi.vm.sade.java-utils</groupId>
                <artifactId>java-properties</artifactId>
                <version>0.1.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>fi.vm.sade.java-utils</groupId>
                <artifactId>java-http</artifactId>
                <version>0.5.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>ma.glasnost.orika</groupId>
                <artifactId>orika-core</artifactId>
                <version>${orika.version}</version>
            </dependency>

            <dependency>
                <groupId>net.jadler</groupId>
                <artifactId>jadler-all</artifactId>
                <version>${jadler.version}</version>
            </dependency>
            <dependency>
                <groupId>net.jadler</groupId>
                <artifactId>jadler-jdk</artifactId>
                <version>${jadler.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>4.4</version>
            </dependency>
            <dependency>
                <groupId>com.carrotsearch</groupId>
                <artifactId>java-sizeof</artifactId>
                <version>0.0.5</version>
            </dependency>
            <dependency>
                <groupId>com.github.kagkarlsson</groupId>
                <artifactId>db-scheduler-spring-boot-starter</artifactId>
                <version>14.0.0</version>
            </dependency>
            <dependency>
                <groupId>org.bitbucket.b_c</groupId>
                <artifactId>jose4j</artifactId>
                <version>0.9.6</version>
            </dependency>
            <dependency>
                <groupId>dev.samstevens.totp</groupId>
                <artifactId>totp-spring-boot-starter</artifactId>
                <version>1.7.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>oph-sade-artifactory-snapshots</id>
            <url>https://artifactory.opintopolku.fi/artifactory/oph-sade-snapshot-local</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>oph-sade-artifactory-releases</id>
            <url>https://artifactory.opintopolku.fi/artifactory/oph-sade-release-local</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>oph-sade-artifactory</id>
            <name>oph-sade-artifactory-releases</name>
            <url>https://artifactory.opintopolku.fi/artifactory/oph-sade-release-local</url>
        </repository>
        <snapshotRepository>
            <id>oph-sade-artifactory</id>
            <name>oph-sade-artifactory-snapshots</name>
            <url>https://artifactory.opintopolku.fi/artifactory/oph-sade-snapshot-local</url>
        </snapshotRepository>
    </distributionManagement>

    <dependencies>
        <dependency>
            <groupId>com.intellij</groupId>
            <artifactId>annotations</artifactId>
            <version>12.0</version>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>${maven-antrun-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>write buildversion.txt</id>
                            <phase>process-resources</phase>
                            <goals>
                                <goal>run</goal>
                            </goals>
                            <configuration>
                                <target>
                                    <echo message="writing ${project.build.directory}/classes/static/buildversion.txt"/>
                                    <echo file="${project.build.directory}/classes/static/buildversion.txt">
                                        <![CDATA[artifactId=${project.artifactId}
version=${project.version}
buildNumber=${buildNumber}
branchName=${branch}
vcsRevision=${revision}
buildTtime=${maven.build.timestamp}
]]>
                                    </echo>
                                    <loadfile property="buildversiontxt" srcFile="${project.build.directory}/classes/static/buildversion.txt"/>
                                    <echo message="${buildversiontxt}"/>
                                    <echo file="target/mavenversion.txt">${project.version}</echo>
                                </target>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <argLine>
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.util=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.11</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <!-- attached to Maven test phase -->
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
